--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "boostrap": "^2.0.0",
     "bootstrap": "^5.3.0",
+    "mathjs": "^11.8.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "sweetalert2": "^11.7.12",
     "sweetalert2-react-content": "^5.0.7"
